--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,79 @@
     box-sizing: border-box;
 }
 body {
-    font-family: Montserrat sans-serif black;
+    font-family: 'Montserrat', sans-serif, black;
 }
 /* BOTTOM BAR */
+.bottom-bar {
+    background-color: rgb(40, 40, 40);
+    padding: 0 15px;
+
+}
+.bottom-bar .center-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.bottom-bar .top-content {
+    text-align: center;
+}
+.bottom-bar i {
+    font-size: 13px;
+}
+.bottom-bar .fa-play {
+    font-size: 15px;
+    border: 3px solid white;
+    border-radius: 50%;
+    padding: 2px 4px 2px 5px;
+    margin: 0 20px;
+}
+.bottom-bar .top-content i:nth-child(2) {
+    margin-left: 15px;
+}
+.bottom-bar .top-content i:nth-child(4) {
+    margin-right: 15px;
+}
+.bottom-bar .bottom-content {
+    margin-top: 5px;
+    width: 30vw;
+    display: flex;
+    align-items: center;
+}
+.bottom-bar input {
+    vertical-align: middle;
+    appearance: none;
+    height: 4px;
+    border-radius: 2px;
+    background-color: rgb(90, 90, 90);
+    
+}
+.bottom-bar .bottom-content input {
+    width: calc(100% - 100px);
+}
+.bottom-bar .right-content i, .bottom-bar .icone i:first-child {
+    margin-right: 10px;
+}
+.bottom-bar .left-content, .bottom-bar .brano {
+    display: flex;
+    align-items: center;
+}
+.bottom-bar .brano {
+    height: 50px;
+}
+.bottom-bar .brano img {
+    height: 100%;
+    margin-right: 15px;
+}
+.bottom-bar .brano .content {
+    float: right;
+    vertical-align: middle;
+}
+.bottom-bar .icone {
+    margin-left: 25px;
+}
+.bottom-bar .subtitle, .bottom-bar .timer {
+    font-size: 10px;
+} 
 /* FINE BOTTOM BAR */
 /* SIDE BAR */
 /* FINE SIDE BAR */
@@ -15,7 +85,6 @@ body {
     background-color: rgba(0, 0, 0, 0.50);
 }
 .top-bar button {
-    color: white;
     background-color: transparent;
     border: 1px solid white;
     border-radius: 30px;
@@ -23,6 +92,7 @@ body {
     font-weight: bold;
     padding: 10px 40px;
     margin-right: 30px;
+    color: inherit;
 }
 /* FINE TOP BAR */
 /* MAIN */
@@ -53,11 +123,14 @@ body {
     height: 100%;
     align-items: center;
 }
+.bottom-bar .col:nth-child(2) {
+    width: 40vw;
+}
 .side-bar {
     position: absolute;
     top: 0;
     left: 0;
-    width: 150px;
+    width: 200px;
     height: 100%;
     z-index: 10;
 }
@@ -83,7 +156,7 @@ body {
     flex-direction: row-reverse;
 }
 main {
-    width: calc(100% - 150px);
+    width: calc(100% - 200px);
     position: absolute;
     right: 0;
     overflow: scroll;
@@ -104,16 +177,17 @@ main {
 .w-100 {
     width: 100%;
 }
+.top-bar, .bottom-bar {
+    color: white;
+}
+.subtitle, .bottom-bar .icone {
+    color: rgb(163, 163, 163);
+}
+.side-bar, .bottom-bar .title {
+    font-size: 12px;
+}
 /* FINE GENERAL */
 /* DA CANCELLARE */
-.bottom-bar {
-    background-color: purple;
-}
-.bottom-bar .col {
-    background-color: green;
-    height: 50px;
-    width: 300px;
-}
 .container {
     color: blue;
 }
