--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 /* BOTTOM BAR */
 .bottom-bar {
     background-color: rgb(40, 40, 40);
-    padding: 0 15px;
+    padding: 0 10px;
 
 }
 .bottom-bar .center-content {
@@ -39,7 +39,7 @@ body {
 }
 .bottom-bar .bottom-content {
     margin-top: 5px;
-    width: 30vw;
+    width: 27vw;
     display: flex;
     align-items: center;
 }
@@ -49,15 +49,30 @@ body {
     height: 4px;
     border-radius: 2px;
     background-color: rgb(90, 90, 90);
-    
 }
-.bottom-bar .bottom-content input {
-    width: calc(100% - 100px);
+.bottom-bar input::-webkit-slider-thumb {
+    appearance: none;
+    height: 12px;
+    width: 12px;
+    border-radius: 50%;
+    background-color: white;
+    display: none;
+}
+.bottom-bar input::-moz-range-thumb {
+    appearance: none;
+    height: 12px;
+    width: 12px;
+    border-radius: 50%;
+    background-color: white;
+    display: none;
+}
+.bottom-bar .bottom-content .range {
+    width: calc(100% - 80px);
 }
 .bottom-bar .right-content i, .bottom-bar .icone i:first-child {
     margin-right: 10px;
 }
-.bottom-bar .left-content, .bottom-bar .brano {
+.bottom-bar .right-content, .bottom-bar .left-content, .bottom-bar .brano {
     display: flex;
     align-items: center;
 }
@@ -73,13 +88,16 @@ body {
     vertical-align: middle;
 }
 .bottom-bar .icone {
-    margin-left: 25px;
+    margin: 0 20px;
 }
 .bottom-bar .subtitle, .bottom-bar .timer {
     font-size: 10px;
 }
 .bottom-bar .timer {
     font-weight: 600;
+}
+.bottom-bar .right-content input {
+    width: 110px;
 }
 /* FINE BOTTOM BAR */
 /* SIDE BAR */
@@ -88,6 +106,16 @@ body {
 }
 .side-bar .top-content {
     padding: 15px 0 0 15px;
+}
+.side-bar .active::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: -15px;
+    transform: translate(0, -50%);
+    height: 100%;
+    width: 2px;
+    background-color: greenyellow;
 }
 .side-bar .logo img {
     height: 40px;
@@ -119,7 +147,7 @@ body {
 }
 .side-bar .playlists {
     overflow-y: scroll;
-    max-height: 220px;
+    height: 220px;
 }
 .side-bar .playlists ul {
     list-style-type: none;
@@ -196,6 +224,17 @@ main {
 .nav a {
     text-decoration: none;
     color: inherit;
+}
+.nav .active::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    right: 50%;
+    transform: translate(50%);
+    width: 40px;
+    height: 2px;
+    background-color: greenyellow;
+    margin-top: 5px;
 }
 .recently, .per-john, .artisti {
     margin-bottom: 40px;
@@ -335,11 +374,7 @@ main {
 .nav a:hover, .side-bar .new-playlist:hover, .side-bar li:hover, .side-bar .download:hover, .bottom-bar .left-content .subtitle:hover, .bottom-bar .icone i:hover, .side-bar .home:hover, .side-bar .search:hover, .side-bar .library:hover {
     color: white;
 }
-.side-bar .home:hover img, .side-bar .search:hover img, .side-bar .library:hover img {
-    filter: invert(1);
-    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(1088%) hue-rotate(121deg) brightness(115%) contrast(100%);
-}
-.side-bar .download:hover img {
+.side-bar .home:hover img, .side-bar .search:hover img, .side-bar .library:hover img, .side-bar .download:hover img {
     filter: invert(1);
     filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(1088%) hue-rotate(121deg) brightness(115%) contrast(100%);
 }
@@ -350,6 +385,9 @@ main {
     transform: scale(1.1);
 }
 .card:hover .hover, .card:hover .fa-play{
+    display: block;
+}
+.bottom-bar .range:hover input::-webkit-slider-thumb {
     display: block;
 }
 /* FINE HOVER */
