--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,13 @@ body {
     border: 3px solid white;
     border-radius: 50%;
     padding: 3px 6px;
-    margin: 0 20px;
+    margin: 0 15px;
 }
 .bottom-bar .top-content i:nth-child(2) {
-    margin-left: 15px;
+    margin-left: 10px;
 }
 .bottom-bar .top-content i:nth-child(4) {
-    margin-right: 15px;
+    margin-right: 10px;
 }
 .bottom-bar .bottom-content {
     margin-top: 5px;
@@ -88,7 +88,7 @@ body {
     vertical-align: middle;
 }
 .bottom-bar .icone {
-    margin: 0 20px;
+    margin: 0 10px 0 15px;
 }
 .bottom-bar .subtitle, .bottom-bar .timer {
     font-size: 10px;
@@ -103,6 +103,13 @@ body {
 /* SIDE BAR */
 .side-bar {
     background-color: black;
+}
+.side-bar .mobile {
+    display: none;
+}
+.side-bar .top-mobile, .side-bar .bottom-mobile {
+    text-align: center;
+    margin: 10px 0;
 }
 .side-bar .top-content {
     padding: 15px 0 0 15px;
@@ -248,6 +255,7 @@ main h2 {
 }
 .card {
     text-align: center;
+    margin-top: 10px;
 }
 .card-img .hover {
     display: none;
@@ -312,7 +320,7 @@ main h2 {
     flex-direction: column;
     height: 100%;
 }
-.side-bar .col:last-child {
+.side-bar .col:last-child, .side-bar .bottom-mobile {
     position: absolute;
     bottom: 0;
 }
@@ -341,6 +349,9 @@ main {
     margin-top: 100px;
     display: flex;
     justify-content: center;
+}
+.recently .row, .per-john .row, .artisti .row {
+    flex-wrap: wrap;
 }
 .recently .col, .per-john .col, .artisti .col {
     width: calc(100% / 6 - 20px);
@@ -392,4 +403,36 @@ main {
 }
 /* FINE HOVER */
 /* MEDIA */
+@media screen and (max-width: 991px) {
+    .recently .col, .per-john .col, .artisti .col {
+        width: calc(100% / 4 - 20px);
+        margin: 0 10px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .recently .col, .per-john .col, .artisti .col {
+        width: calc(100% / 2 - 20px);
+        margin: 0 10px;
+    }    
+}
+@media screen and (max-width: 600px) {
+    .side-bar {
+        width: 70px;
+    }
+    .side-bar .mobile {
+        display: block;
+    }
+    .side-bar .row {
+        display: none;
+    }
+    main {
+        width: calc(100% - 70px);
+    }
+    .bottom-bar .icone i {
+        display: block;
+    }
+    .bottom-bar .icone i:last-child {
+        margin-top: 10px;
+    }
+}
 /* FINE MEDIA */
