--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ body {
 }
 .side-bar .playlists {
     overflow-y: scroll;
-    height: 220px;
+    height: 32vh;
 }
 .side-bar .playlists ul {
     list-style-type: none;
@@ -319,10 +319,19 @@ main h2 {
 .side-bar .row {
     flex-direction: column;
     height: 100%;
+    justify-content: space-between;
 }
-.side-bar .col:last-child, .side-bar .bottom-mobile {
+.side-bar .bottom-mobile {
     position: absolute;
     bottom: 0;
+}
+.side-bar .col:first-child {
+    height: calc(100vh - 148px);
+    min-height: 365px;
+}
+.side-bar .col:last-child {
+    align-self: flex-end;
+    z-index: 11;
 }
 .top-bar {
     position: absolute;
